# Alex-Music

MVP/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlayerControls.cpp  PlayerControls.h  Playlist.cpp  Playlist.h  Track.cpp  Track.h  main.cpp
MVP0/: MainWindow.h  PlayerControls.cpp  PlayerControls.h
MVP1/: BadTrackDialog.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlayerControls.cpp  PlayerControls.h  Playlist.cpp  Playlist.h  Track.cpp  TrackValidator.cpp  main.cpp
MVP2/: MainWindow.cpp  MainWindow.h  PlayerControls.h  Playlist.cpp  Playlist.h  Track.h  TrackText.h
MVP3/: BadTrackDialog.cpp  HtmlDelegate.cpp  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  TrackValidator.h
MVP3-Metadata/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Mp3Metadata.h  build.ninja  cmake_install.cmake  qtcsettings.cmake
MVP3-Metadata/.cmake/api/v1/reply/: cache-v2-f05626c107224ccefeff.json  cmakeFiles-v1-0d8eac49b7f207edcecd.json  codemodel-v2-90cd78c2079b9b0d7bfa.json  index-2026-02-02T15-02-20-0192.json  target-AlexMusic-Debug-763459c47e5927e800ad.json
MVP3-Metadata/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
MVP3-Metadata/.qtc_clangd/: compile_commands.json
MVP3-Metadata/.qtc_clangd/.cache/clangd/index/: BadTrackDialog.cpp.57C7B682255AA411.idx  HtmlDelegate.h.DF90148639A71CDC.idx  MainWindow.cpp.71FF774985964F4F.idx  Playlist.cpp.6BCC94B2F2F09122.idx  Playlist.h.FA91311BA6DF382E.idx  QHBoxLayout.9C6430DBAC9EE556.idx  SettingsDialog.cpp.FFEBFA7D0013EF29.idx  Track.cpp.F55D8FE7C595BEF9.idx  TrackValidator.cpp.E84C6DA1EC024194.idx  TrackValidator.h.249FCD3A78A70201.idx  docobj.h.3923E7F94B7C44E7.idx  objidlbase.h.89C95A5A97249095.idx  qabstractitemdelegate.h.18CFB11225F9D49C.idx  qcoreapplication.h.FD416D8643BB53D6.idx  qevent.h.A821FAB87252853A.idx  qflags.h.22D10BED29542903.idx  qobject.h.00DC5B2B4FD5601B.idx  qtclasshelpermacros.h.FC181971501DDE9E.idx  qtmetamacros.h.FBB336678D2078DC.idx  qtypeinfo.h.6E11140C37A571A8.idx  qwidget.h.790D2B839BCFE3B5.idx
MVP3-Metadata/AlexMusic_autogen/: deps
MVP3-Metadata/AlexMusic_autogen/EWIEGA46WW/: moc_BadTrackDialog.cpp.d  moc_HtmlDelegate.cpp  moc_HtmlDelegate.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PlayerControls.cpp  moc_PlayerControls.cpp.d  moc_SettingsDialog.cpp.d  moc_TrackValidator.cpp.d
MVP3-Table/: MainWindow.h  Mp3Metadata.cpp  Track.cpp
MVP3-Table(notEnhanced)/: CMakeLists.txt  MainWindow.cpp  Mp3Metadata.h  PlayerControls.cpp  PlayerControls.h  Track.h  TrackValidator.cpp  qtcsettings.cmake
MVP3.0/: .ninja_deps  .ninja_log  AlexMusic1.lnk  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  resource_finder.h
MVP3.0/.cmake/api/v1/reply/: cache-v2-e537f3dba7682ecc1281.json  cmakeFiles-v1-2be6f5ab67cad3adc6e1.json  codemodel-v2-9e2c7b68272c9c20b3e7.json  index-2026-02-02T14-48-56-0211.json  target-AlexMusic-Debug-4ba31a7e6a8677adde04.json  target-AlexMusic_autogen-Debug-19ab7f6d04644891639b.json
MVP3.0/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
MVP3.0/.qtc_clangd/: compile_commands.json
MVP3.0/.qtc_clangd/.cache/clangd/index/: BadTrackDialog.cpp.3042C473A9D7E8C8.idx  MainWindow.h.BD9085489AD40AE8.idx  PlayerControls.cpp.95C324F04CC18478.idx  QCheckBox.8DD5C93A1DAAB0A3.idx  SettingsDialog.cpp.F50BE59E954B1FC5.idx  TrackText.h.B49A248E80F200C2.idx  TrackValidator.cpp.E9EADA235E4CCCDC.idx  TrackValidator.h.D5F177D14DD31355.idx  qabstractitemdelegate.h.18CFB11225F9D49C.idx  qabstractscrollarea.h.F364CE3E468CABBF.idx  qabstractspinbox.h.1586E117E24F0CAF.idx  qcontiguouscache.h.652ACAF2553B7D71.idx  qhash.h.4D47C58E98610028.idx  qnativeinterface.h.2F10110D6BF221F3.idx  qscrollbar.h.8DF4F351885AA1C0.idx  qshareddata.h.8A82274C3A3B38F4.idx  qtclasshelpermacros.h.FC181971501DDE9E.idx  qtextlayout.h.C50645A60781882D.idx  qtmetamacros.h.FBB336678D2078DC.idx  (+5 more)
MVP3.0/AlexMusic_autogen/: deps  mocs_compilation.cpp
MVP3.0/AlexMusic_autogen/EWIEGA46WW/: moc_BadTrackDialog.cpp  moc_BadTrackDialog.cpp.d  moc_HtmlDelegate.cpp.d  moc_MainWindow.cpp.d  moc_PlayerControls.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d  moc_TrackValidator.cpp  moc_TrackValidator.cpp.d
MVP3.1/: BadTrackDialog.cpp  MainWindow.cpp  SettingsDialog.h
MVP3.2/: CMakeCache.txt.prev  Track.cpp  Track.h  TrackText.h  TrackValidator.cpp  cmake_install.cmake
MVP3.2.1/: CMakeLists.txt  MainWindow.cpp  Playlist.cpp
MVP3.2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
MVP3_APP/: Track.cpp  Track.h
MVP4/: CMakeLists.txt  HtmlDelegate.h  MainWindow.cpp  MainWindow.h  RatingDelegate.cpp  RatingDelegate.h  SettingsDialog.cpp  Track.cpp  Track.h  TrackValidator.cpp
Ver1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Playlist.cpp  Playlist.h  Track.cpp  Track.h  main.cpp
Ver2/: CMakeLists.txt  MainWindow.cpp  PlayerControls.cpp  Playlist.cpp  Playlist.h  Track.cpp  main.cpp
Ver3/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlayerControls.h  Playlist.cpp  Playlist.h  Track.h
Ver4/: MainWindow.cpp  MainWindow.h  Playlist.cpp  Playlist.h  Track.h  main.cpp
Ver5/: MainWindow.cpp  MainWindow.h  Playlist.cpp  Playlist.h  main.cpp
Ver6/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlayerControls.h
